// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render DemoConsoleFetch (missing vm) 1`] = `
<DocumentFragment>
  <small
    class=""
    data-ouia-component-id="OUIA-Generated-Text-3"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
    data-test-id="DemoUseResourceTest-error"
  >
    Missing virtual machine data
  </small>
</DocumentFragment>
`;

exports[`Render DemoConsoleFetch (none valid vm) 1`] = `
<DocumentFragment>
  <small
    class=""
    data-ouia-component-id="OUIA-Generated-Text-2"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
    data-test-id="DemoUseResourceTest-bad-response"
  >
    Missing virtual machine data
  </small>
</DocumentFragment>
`;

exports[`Render DemoConsoleFetch (valid vm) 1`] = `
<DocumentFragment>
  <span
    data-test-id="DemoUseResourceTest"
  >
    <div
      class="pf-c-label-group"
    >
      <div
        class="pf-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-c-label-group__list"
          role="list"
        >
          <li
            class="pf-c-label-group__list-item"
          >
            <span
              class="pf-c-label"
            >
              <a
                class="pf-c-label__content"
                href="#"
              >
                <span
                  class="pf-c-label__text"
                >
                  VMINotExists=False
                </span>
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
